<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/wallet_nav_graph"
        android:icon="@drawable/ic_wallet"
        android:contentDescription="@string/bottom_nav_menu_item_wallet"
        android:title="@string/bottom_nav_menu_item_wallet" />

    <item
        android:id="@+id/rewards_nav_graph"
        android:icon="@drawable/ic_gift_box"
        android:contentDescription="@string/bottom_nav_menu_item_rewards"
        android:title="@string/bottom_nav_menu_item_rewards" />

    <item
        android:id="@+id/settings_nav_graph"
        android:icon="@drawable/ic_settings"
        android:contentDescription="@string/bottom_nav_menu_item_settings"
        android:title="@string/bottom_nav_menu_item_settings" />
</menu>
