<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llWalletHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvReceiveEth"
            style="@style/WalletMenuItem"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_qr_code"
            android:text="@string/receive" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEthBalance"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0.0000" />

            <TextView
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/balance" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTransferEth"
            style="@style/WalletMenuItem"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_paper_plane"
            android:text="@string/transfer" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivEthereum"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/ic_ethereum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llWalletHeader" />

    <TextView
        android:id="@+id/tvWalletAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/ivEthereum"
        tools:text="Address: 0x123456789" />

</androidx.constraintlayout.widget.ConstraintLayout>
